    arguments, both the base and local Dtabs.

  * finagle-core: `c.t.f.Failure` convenience constructors (e.g., `Failure.Cause`,
    `Failure.Rejected`) were removed in favor of uniform flag treatment, and clean
    separation of attributes from interpretation of those attributes.

  * finagle-core: `ExitGuard` usage is now private to finagle.

  * finagle-http: deprecated methods in `c.t.f.http.HttpMessageProxy` have been removed.

  * finagle-memcached / finagle-memcachedx: move TwitterCacheResolver
    and related objects to new finagle-cacheresolver package.

  * finagle-memcached / finagle-memcachedx: failureAccrual param in ReplicationClient
    is changed from type (Int, Duration) to (Int, () => Duration), to allow flexibility
    to config duration. Also see `markDeadFor` change in finagle-core in the "New Features"
    section below.

  * finagle-mux: `c.t.f.mux.RequestNackedException` is removed in favor of a standard
    Failure (`c.t.f.Failure.Rejected`).

  * finagle-ostrich4: Switched dependency to finagle-httpx from finagle-http.

  * finagle-stats: Switched dependency to finagle-httpx from finagle-http.

  * finagle-core: remove deprecated `c.t.f.builder.ClientBuilder.stack` taking a
    `Stack.Params => Client[Req1, Rep1]`.

  * finagle-memcached / finagle-memcachedx: MigrationClientTest now uses
    ServerCnxnFactory from com.twitter.zk rather than NIOServerCnxn.Factory from
    org.apache.zookeeper.server.

  * finagle-serversets: ZkInstance in tests now uses ServerCnxnFactory from
    com.twitter.zk rather than NIOServerCnxn.Factory from
    org.apache.zookeeper.server.

Runtime Behavior Changes
~~~~~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `com.twitter.finagle.service.StatsFilter` no longer requires a
    `com.twitter.finagle.stats.RollupStatsReceiver` for correct behaviour, and
    providing one will double count failures.

  * finagle-core: `com.twitter.finagle.factory.TimeoutFactory` will fail with