@@ -1,9 +1,10 @@
 package com.twitter.finagle.service
 
 import com.twitter.finagle._
+import com.twitter.finagle.context.Contexts
 import com.twitter.finagle.client.LatencyCompensation
 import com.twitter.finagle.tracing.Trace
-import com.twitter.util.{Future, Duration, Timer}
+import com.twitter.util.{Future, Duration, Timer, Time}
 
 object TimeoutFilter {
   val TimeoutAnnotation = "finagle.timeout"
@@ -23,26 +24,48 @@ object TimeoutFilter {
   }
 
   /**
-   * Creates a [[com.twitter.finagle.Stackable]] [[com.twitter.finagle.service.TimeoutFilter]].
+   * Creates a [[com.twitter.finagle.Stackable]] [[com.twitter.finagle.service.TimeoutFilter]]
+   * for use in clients.
    */
-  def module[Req, Rep]: Stackable[ServiceFactory[Req, Rep]] =
+  def clientModule[Req, Rep]: Stackable[ServiceFactory[Req, Rep]] =
     new Stack.Module3[
-        TimeoutFilter.Param,
-        LatencyCompensation.Compensation,
-        param.Timer,
+        TimeoutFilter.Param, 
+        param.Timer, 
+        LatencyCompensation.Compensation, 
         ServiceFactory[Req, Rep]] {
       val role = TimeoutFilter.role
-      val description = "Apply a timeout to requests"
-      def make(
-          _param: Param, _compensation: LatencyCompensation.Compensation,
-          _timer: param.Timer, next: ServiceFactory[Req, Rep]
-      ) = {
+      val description = "Apply a timeout-derived deadline to requests; adjust existing deadlines."
+      def make(_param: Param, _timer: param.Timer, 
+          _compensation: LatencyCompensation.Compensation, 
+          next: ServiceFactory[Req, Rep]) = {
+        val Param(timeout) = _param
+        val param.Timer(timer) = _timer
+        val LatencyCompensation.Compensation(compensation) = _compensation
+        
+        val exc = new IndividualRequestTimeoutException(timeout)
+        val filter = new TimeoutFilter[Req, Rep](timeout + compensation, exc, timer)
+        filter andThen next
+      }
+    }
+
+  /**
+   * Creates a [[com.twitter.finagle.Stackable]] [[com.twitter.finagle.service.TimeoutFilter]]
+   * for use in servers.
+   */
+  def serverModule[Req, Rep]: Stackable[ServiceFactory[Req, Rep]] =
+    new Stack.Module2[
+        TimeoutFilter.Param, 
+        param.Timer, 
+        ServiceFactory[Req, Rep]] {
+      val role = TimeoutFilter.role
+      val description = "Apply a timeout-derived deadline to requests; adjust existing deadlines."
+      def make(_param: Param, _timer: param.Timer, next: ServiceFactory[Req, Rep]) = {
         val Param(timeout) = _param
         val param.Timer(timer) = _timer
         if (!timeout.isFinite) next else {
           val exc = new IndividualRequestTimeoutException(timeout)
-          val LatencyCompensation.Compensation(compensation) = _compensation
-          new TimeoutFilter(timeout + compensation, exc, timer) andThen next
+          val filter = new TimeoutFilter[Req, Rep](timeout, exc, timer)
+          filter andThen next
         }
       }
     }
@@ -64,13 +87,24 @@ class TimeoutFilter[Req, Rep](
     this(timeout, new IndividualRequestTimeoutException(timeout), timer)
 
   def apply(request: Req, service: Service[Req, Rep]): Future[Rep] = {
-    val res = service(request)
+    val timeoutDeadline = Deadline.ofTimeout(timeout)
 
-    res.within(timer, timeout) rescue {
-      case exc: java.util.concurrent.TimeoutException =>
-        res.raise(exc)
-        Trace.record(TimeoutFilter.TimeoutAnnotation)
-        Future.exception(exception)
+    // If there's a current deadline, we combine it with the one derived
+    // from our timeout.
+    val deadline = Contexts.broadcast.get(Deadline) match {
+      case Some(current) => 
+        Deadline.combined(timeoutDeadline, current)
+      case None => timeoutDeadline
+    }
+
+    Contexts.broadcast.let(Deadline, deadline) {
+      val res = service(request)
+      res.within(timer, timeout) rescue {
+        case exc: java.util.concurrent.TimeoutException =>
+          res.raise(exc)
+          Trace.record(TimeoutFilter.TimeoutAnnotation)
+          Future.exception(exception)
+      }
     }
   }
 }
